--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <img src="./Imagesss/balaji2com.jpg" alt="Paramount Enclave Phase II">
                     <div class="type-text">
                         <h2>Shree Balaji <br> Heaven</h2>
-                        <!-- <a href="" class="btn btn-primary" download="Shree Balaji Heaven Brochure">Download E-Brochure</a> -->
+                        <a href="Pdf/Shree Balaji HEAVEN CC.pdf" class="btn btn-primary" download="Shree Balaji Heaven Brochure">Download E-Brochure</a>
                     </div>
                 </div>
             </div>
