--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
             </div>
             <div class="item item-3">
                 <div class="type-img">
-                    <img src="./Imagesss/balaji2com.jpg" alt="Paramount Enclave Phase II">
+                    <img src="./Imagesss/balaji2com.jpg" alt="Shree Balaji Heaven">
                     <div class="type-text">
                         <h2>Shree Balaji <br> Heaven</h2>
-                        <a href="./Pdf/Shree Balaji HEAVEN CC.pdf" class="btn btn-primary" download="Shree Balaji Heaven Brochure">Download E-Brochure</a>
+                        <a href="Pdf/Shree Balaji HEAVEN CC.pdf" class="btn btn-primary" download="Shree Balaji Heaven Brochure">Download E-Brochure</a>
                     </div>
                 </div>
             </div>
@@ -114,79 +114,7 @@
             </div>
         </div>
     </section>
-
-    <!-- <section id="menu"> 
-        <h1 class="menu-main-heading">Our Menu</h1>
-        <div class="menu-wrapper container">
-            <div class="menu-item-menu">
-                <div class="menu-image">
-                    <img src="./images/pexels-artem-beliaikin-1078958.jpg" alt="">
-                </div>
-                <div class="menu-description">
-                    <h3 class="menu-title">
-                        Item 1
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, nam.</p>
-                </div>
-            </div>
-            <div class="menu-item-menu">
-                <div class="menu-image">
-                    <img src="./images/pexels-artem-beliaikin-994524.jpg" alt="">
-                </div>
-                <div class="menu-description">
-                    <h3 class="menu-title">
-                        Item 2
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, nam.</p>
-                </div>
-            </div>
-            <div class="menu-item-menu">
-                <div class="menu-image">
-                    <img src="./images/pexels-ray-piedra-1478477.jpg" alt="">
-                </div>
-                <div class="menu-description">
-                    <h3 class="menu-title">
-                        Item 3
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, nam.</p>
-                </div>
-            </div>
-            <div class="menu-item-menu">
-                <div class="menu-image">
-                    <img src="./images/pexels-ksenia-chernaya-3965540.jpg" alt="">
-                </div>
-                <div class="menu-description">
-                    <h3 class="menu-title">
-                        Item 4
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, nam.</p>
-                </div>
-            </div>
-            <div class="menu-item-menu">
-                <div class="menu-image">
-                    <img src="./images/pexels-moose-photos-1038000.jpg" alt="">
-                </div>
-                <div class="menu-description">
-                    <h3 class="menu-title">
-                        Item 5
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, nam.</p>
-                </div>
-            </div>
-            <div class="menu-item-menu">
-                <div class="menu-image">
-                    <img src="./images/pexels-lawrence-suzara-1566435.jpg" alt="">
-                </div>
-                <div class="menu-description">
-                    <h3 class="menu-title">
-                        Item 6
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, nam.</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
+        
     <section id="contact">
         <div class="container contact-section">
             <div class="contact-image">
